<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".NewNote">

    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="New Note"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_done_24"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/addNoteHeading"
        android:layout_marginEnd="6dp"/>

    <Spinner
        android:id="@+id/importanceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addNoteHeading"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/importanceSpinner"
        android:layout_marginTop="12dp"
        android:background="@drawable/black_border"
        android:hint="Title "
        android:maxLines="1"
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="389dp"
        android:layout_height="522dp"
        android:layout_below="@id/titleEditText"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_border"
        android:gravity="top"
        android:hint="Write note... "
        android:padding="12dp"
        android:textColorHint="@color/black"
        android:textSize="18sp" />

</RelativeLayout>
