<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UpdateNote">

    <TextView
        android:id="@+id/editNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Edit Note"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/updateSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_done_24"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/editNoteHeading"
        android:layout_marginEnd="6dp"/>

    <Spinner
        android:id="@+id/importanceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editNoteHeading"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/updateTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Update Title"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@id/importanceSpinner"
        android:background="@drawable/black_border"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/updateContentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="Update notes..."
        android:textColorHint="@color/black"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@drawable/black_border"
        android:layout_below="@id/updateTitleEditText"
        android:layout_marginTop="12dp"
        />
</RelativeLayout>
